# graphpulse

./: .env.example  .gitignore  CLAUDE.md  HOW_TO_RUN.md  HOW_TO_RUN.txt  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: celery_app.py  main.py  models.py
apps/consumer/: main.py
apps/producer/: main.py
apps/ui/: README.md
configs/: catboost.yaml  data.yaml  graphsage.yaml  hgt.yaml  lgbm.yaml  tgn.yaml
docs/: ABLATION_REPORT.md  ARCHITECTURE.md  ROADMAP.md
infra/docker/: Dockerfile.api  Dockerfile.consumer  Dockerfile.producer  Dockerfile.worker
infra/grafana/dashboards/: fraud_metrics.json
infra/grafana/provisioning/dashboards/: dashboards.yaml
infra/grafana/provisioning/datasources/: datasources.yaml
infra/prometheus/: prometheus.yml
infra/redpanda/: redpanda.yaml
ml/data/: graph_builder.py  tabular_dataset.py  temporal_sampler.py
ml/eval/: latency_bench.py  metrics.py
ml/explain/: gnn_explainer.py  shap_wrapper.py
ml/feature_store/: feast_repo.py
ml/models/: catboost.py  graphsage.py  hgt.py  lgbm.py  tgn.py
ml/online/: adwin_drift.py  river_learner.py
ml/train/: cli.py  gnn_trainer.py
notebooks/: 01_eda.ipynb  02_lgbm.ipynb  03_tgn.ipynb  04_online_drift.ipynb  05_explain.ipynb
scripts/: bench.py  download_elliptic.py  download_ieee.py  export_onnx.py  replay_stream.py
tests/integration/: test_smoke_train.py
tests/unit/: test_metrics.py  test_models.py
